--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -22,6 +22,7 @@ concurrency:
 
 env:
   GO_VERSION: ''
+  KIND_VERSION: v0.21.0
   GOSEC_VERSION: '2.18.2'
   HELM_VERSION: v3.14.0
   SUBMARINER_VERSION: '0.16.3'
@@ -68,7 +69,7 @@ jobs:
 
       - name: Upload base images to artifact
         if: steps.check.outputs.build-base == 1
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: kube-ovn-base
           path: image-amd64.tar
@@ -114,7 +115,7 @@ jobs:
 
       - name: Upload dpdk base images to artifact
         if: steps.check.outputs.build-dpdk-base == 1
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: kube-ovn-dpdk-base
           path: image-amd64-dpdk.tar
@@ -173,7 +174,7 @@ jobs:
 
       - name: Download base images
         if: needs.build-kube-ovn-base.outputs.build-base == 1
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn-base
 
@@ -183,7 +184,7 @@ jobs:
 
       - name: Download dpdk base images
         if: needs.build-kube-ovn-dpdk-base.outputs.build-dpdk-base == 1
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn-dpdk-base
 
@@ -218,13 +219,13 @@ jobs:
           make tar-kube-ovn-dpdk
 
       - name: Upload images to artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: kube-ovn
           path: kube-ovn.tar
 
       - name: Upload dpdk images to artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: github.event_name != 'pull_request'
         with:
           name: kube-ovn-dpdk
@@ -252,7 +253,7 @@ jobs:
           make tar-vpc-nat-gateway
 
       - name: Upload image to artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: vpc-nat-gateway
           path: vpc-nat-gateway.tar
@@ -280,13 +281,13 @@ jobs:
           make tar-centos-compile
 
       - name: Upload centos7-compile image to artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: centos7-compile
           path: centos7-compile.tar
 
       # - name: Upload centos8-compile image to artifact
-      #   uses: actions/upload-artifact@v3
+      #   uses: actions/upload-artifact@v4
       #   with:
       #     name: centos8-compile
       #     path: centos8-compile.tar
@@ -466,7 +467,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -474,7 +475,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -513,7 +514,7 @@ jobs:
           mv kubectl-ko-log.tar.gz k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: k8s-conformance-e2e-${{ matrix.ip-family }}-${{ matrix.mode }}-ko-log
@@ -626,7 +627,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -634,7 +635,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -669,7 +670,7 @@ jobs:
           mv kubectl-ko-log.tar.gz k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: k8s-netpol-e2e-${{ matrix.ip-family }}-ko-log
@@ -757,7 +758,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -765,7 +766,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -800,7 +801,7 @@ jobs:
           mv kubectl-ko-log.tar.gz cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: cyclonus-netpol-e2e-${{ matrix.ip-family }}-ko-log
@@ -907,7 +908,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -915,7 +916,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -954,7 +955,7 @@ jobs:
           mv kubectl-ko-log.tar.gz kube-ovn-conformance-e2e-${{ matrix.mode }}-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: kube-ovn-conformance-e2e-${{ matrix.mode }}-${{ matrix.ip-family }}-ko-log
@@ -1061,7 +1062,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1069,7 +1070,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1101,7 +1102,7 @@ jobs:
           mv kubectl-ko-log.tar.gz kube-ovn-ic-conformance-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: kube-ovn-ic-conformance-e2e-ko-log
@@ -1134,11 +1135,11 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1182,11 +1183,11 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1228,11 +1229,11 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1276,11 +1277,11 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1366,7 +1367,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1374,12 +1375,12 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
       - name: Download vpc-nat-gateway image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: vpc-nat-gateway
 
@@ -1467,7 +1468,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1475,7 +1476,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1562,7 +1563,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1570,7 +1571,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1602,7 +1603,7 @@ jobs:
           mv kubectl-ko-log.tar.gz webhook-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: webhook-e2e-ko-log
@@ -1629,11 +1630,11 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1658,7 +1659,7 @@ jobs:
           mv kubectl-ko-log.tar.gz installation-compatibility-test-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: installation-compatibility-test-ko-log
@@ -1737,7 +1738,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1745,7 +1746,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1777,7 +1778,7 @@ jobs:
           mv kubectl-ko-log.tar.gz cilium-chaining-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: cilium-chaining-e2e-ko-log
@@ -1861,7 +1862,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1869,7 +1870,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1907,7 +1908,7 @@ jobs:
           mv kubectl-ko-log.tar.gz kube-ovn-ha-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: kube-ovn-ha-e2e-${{ matrix.ssl }}-${{ matrix.bind-local }}-${{ matrix.ip-family }}-ko-log
@@ -1958,7 +1959,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install submariner subctl
@@ -1968,7 +1969,7 @@ jobs:
         run: curl -Ls https://get.submariner.io | bash
 
       - name: Download image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -1997,7 +1998,7 @@ jobs:
           mv kubectl-ko-log.tar.gz kube-ovn-submariner-conformance-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: kube-ovn-submariner-conformance-e2e-ko-log
@@ -2069,7 +2070,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -2077,12 +2078,12 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
       - name: Download vpc-nat-gateway image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: vpc-nat-gateway
 
@@ -2115,7 +2116,7 @@ jobs:
           mv kubectl-ko-log.tar.gz iptables-vpc-nat-gw-conformance-e2e-ko-log.tar.gz
 
       - name: upload kubectl ko log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: iptables-vpc-nat-gw-conformance-e2e-ko-log
@@ -2183,7 +2184,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -2191,7 +2192,7 @@ jobs:
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
@@ -2259,28 +2260,28 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn
 
       - name: Download kube-ovn-dpdk image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         if: github.event_name != 'pull_request'
         with:
           name: kube-ovn-dpdk
 
       - name: Download vpc-nat-gateway image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: vpc-nat-gateway
 
       - name: Download centos7-compile image
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: centos7-compile
 
       # - name: Download centos8-compile image
-      #   uses: actions/download-artifact@v3
+      #   uses: actions/download-artifact@v4
       #   with:
       #     name: centos8-compile
 
