--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -11,6 +11,7 @@ concurrency:
 
 env:
   GO_VERSION: ''
+  KIND_VERSION: v0.21.0
   HELM_VERSION: v3.14.0
   SUBMARINER_VERSION: '0.16.3'
 
@@ -74,7 +75,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -160,7 +161,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -223,7 +224,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -299,7 +300,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -375,7 +376,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -431,7 +432,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -482,7 +483,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -535,7 +536,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -607,7 +608,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -681,7 +682,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -752,7 +753,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -806,7 +807,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Create kind cluster
@@ -883,7 +884,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -972,7 +973,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1072,7 +1073,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1136,7 +1137,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install submariner subctl
@@ -1212,7 +1213,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
@@ -1283,7 +1284,7 @@ jobs:
       - name: Install kind
         uses: helm/kind-action@v1.8.0
         with:
-          version: v0.20.0
+          version: ${{ env.KIND_VERSION }}
           install_only: true
 
       - name: Install ginkgo
